--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx|css|less|scss)'"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
