--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@apollo/client": "^3.7.10",
     "@types/node": "^18.15.11",
+    "classnames": "^2.3.2",
+    "antd-mobile": "^5.26.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -33,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.7",
     "typescript": "^4.9.3",
+    "less": "^4.1.3",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
   }
