--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "mock": "node ./mock/index.js",
     "preview": "vite preview",
     "format": "prettier --write 'src/**/*.+(js|ts|jsx|tsx|css|less|scss)'"
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
     "@types/node": "^18.15.11",
-    "classnames": "^2.3.2",
     "antd-mobile": "^5.26.0",
+    "classnames": "^2.3.2",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@apollo/server": "^4.5.0",
+    "@graphql-tools/mock": "^8.7.19",
+    "@faker-js/faker": "^7.6.0",
+    "@graphql-tools/schema": "^9.0.17",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -33,9 +38,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "less": "^4.1.3",
     "prettier": "^2.8.7",
     "typescript": "^4.9.3",
-    "less": "^4.1.3",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
   }
